kubernetes-labs/lab-23-istio-canary-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-23-canary
  labels:
    istio-injection: enabled
